test/tests/ConstantAssignment.expected
ConstantAssignment.frost:5:9: error: cannot assign to constant 'a'
ConstantAssignment.frost:11:5: error: cannot assign to constant 'a'
ConstantAssignment.frost:13:5: error: cannot assign to constant 'b'
3 errors
